Collections (#112)
* phase 1

* phase 2

* phase 3

* phase 4

* phase 5

* phase 6

* phase 7

* phase 8

* phase 9

* phase 10

* phase 11

* optimize imports

* preserve frontier list scroll position and selected row visibility

* clip scrollbox rendering and visible hover to viewport

* add scrollbox separator between personal and global frontier blocks

* unify checkbox visibility behavior across frontier rows

* refine frontier list grouping and collection color framing

* refine frontier list collection block rendering and truncation

* increase announcement text minimum brightness

* show contextual collection hint in new frontier dialog

* add shared-frontier delete warning and reuse delete dialog base for collections

* remove scrollbox row gap and keep focus border inside rows

* replace collection row chevron text with icon button

* refine collection row text rendering and counter label formatting

* add focused icon state and switch IconButton to per-icon textures

* skip non-focusable scroll rows and allow custom focus outlines

* unify delete confirmation dont-ask label across dialogs and locales

* rename frontier clipboard API and simplify paste options visibility logic

* store collapsed collection row ids as string tags in ui state nbt

* normalize client mapfrontiers storage paths and migrate singleplayer overrides

* fix personal frontier import after initial sync and on non-dedicated servers

* separate client user name formatting from SettingsUser.toString

* decouple new frontier follow-up actions from fullscreen map

* refactor phases 1 and 2

* refactor phase 3

* refactor phase 4

* refactor phase 5

* refactor phase 6

* refactor phase 7

* refactor phase 8

* refactor phase 9

* refactor phase 10

* refactor phase 11

* refactor phase 12

* refactor phase 13

* refactor phase 14

* refactor phase 15

* implement the collections api integration and unify frontier creation flows

* temporal collections phase 1

* temporal collections phas